# RayTracer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure  rayMouse.cpp  requirements.txt
.github/workflows/: build.yml  on-push.yml  test.yml  tests_and_build.yml
CI/: all  build  compile
Engine/: CMakeLists.txt
Engine/Vector/: Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
Engine/Window/: Window.cpp  Window.hpp
Engine/include/: Temp.hpp
Engine/include/Engine/: Application.hpp  ArgumentParser.hpp  Raylib.hpp  Raymath.hpp  ThreadPool.hpp
Engine/include/Engine/Assets/: Image.hpp  Material.hpp  Mesh.hpp  Model.hpp  Texture.hpp
Engine/include/Engine/Ray/: Ray.hpp
Engine/include/Engine/Utils/: ArgumentParser.hpp  Calcul.hpp  OS.hpp  Operations.hpp  Random.hpp  ThreadPool.hpp
Engine/include/Engine/Vector/: Vector2.hpp  Vector3.hpp
Engine/include/Engine/Window/: Window.hpp
Engine/src/: Application.cpp  ArgumentParser.cpp  Temp.cpp
Engine/src/Assets/: Image.cpp  Material.cpp  Mesh.cpp  Model.cpp  Texture.cpp
Engine/src/Ray/: Ray.cpp  Ray.hpp
Engine/src/Utils/: ArgumentParser.cpp  Operations.cpp  Random.cpp
Engine/src/Vector/: Vector2.cpp  Vector3.cpp
Engine/src/Window/: Window.cpp
RayTracer/: CMakeLists.txt  CMakeLists.txt.orig
RayTracer/include/: Main.hpp  RayTracerApp.hpp
RayTracer/include/Camera/: Camera.hpp
RayTracer/include/Materials/: AMaterial.hpp  AMaterial.hpp.orig  Glass.hpp  IMaterial.hpp  Light.hpp  Metal.hpp  Normal.hpp  VentaBlack.hpp
RayTracer/include/Objects/: Object.hpp  ObjectList.hpp  Sphere.hpp
RayTracer/include/Scene/: Scene.hpp
RayTracer/src/: Main.cpp  Main.cpp.orig  RayTracerApp.cpp  RayTracerApp.cpp.orig  test.cpp
RayTracer/src/Camera/: Camera.cpp
RayTracer/src/Materials/: AMaterial.cpp  Glass.cpp  IMaterial.cpp  Light.cpp  Metal.cpp  Normal.cpp  VentaBlack.cpp
RayTracer/src/Objects/: Object.cpp  Sphere.cpp
RayTracer/src/Scene/: Scene.cpp
Resources/: cool_scene.json  scene.json  scene.txt
Resources/item01/: Item01.fbx  Item01.ma  Item01.mtl  Thumbs.db
SceneEditor/: CMakeLists.txt
SceneEditor/include/: Raygui.hpp  SceneEditorApp.hpp
SceneEditor/src/: Main.cpp  SceneEditorApp.cpp
Tests/: CMakeLists.txt
Tests/src/: TestsArgumentParser.cpp  TestsVector2.cpp  TestsVector3.cpp
Vector/: Vector3.cpp  Vector3.hpp
